--- a/index.html
+++ b/index.html
@@ -277,6 +277,30 @@ html,body{height:100%;overflow:hidden;background:var(--bg);color:var(--text);
 .install-txt{flex:1;font-size:11px;color:var(--text2);line-height:1.5}
 .install-x{color:var(--text3);padding:6px;cursor:pointer;font-size:16px;flex-shrink:0}
 
+/* ── Lang toggle ── */
+.lang-toggle{
+  display:none;flex-shrink:0;padding:6px 16px 4px;
+  gap:4px;align-items:center;background:var(--bg);
+}
+.lang-toggle.show{display:flex}
+.lang-lbl{font-family:'DM Mono',monospace;font-size:9px;color:var(--text3);letter-spacing:1px;margin-right:6px}
+.lang-btn{
+  font-family:'DM Mono',monospace;font-size:11px;font-weight:500;
+  border:1px solid var(--border2);background:transparent;color:var(--text2);
+  border-radius:6px;padding:4px 10px;cursor:pointer;transition:all .15s;
+  -webkit-appearance:none;
+}
+.lang-btn.active{
+  background:rgba(61,142,240,.15);color:var(--accent2);
+  border-color:rgba(61,142,240,.5);
+}
+.lang-btn:active{opacity:.7}
+.translating-badge{
+  margin-left:auto;font-family:'DM Mono',monospace;font-size:9px;
+  color:var(--yellow);letter-spacing:.5px;opacity:0;transition:opacity .3s;
+}
+.translating-badge.show{opacity:1}
+
 /* ── Error toast ── */
 .toast{
   position:fixed;bottom:calc(80px + var(--safe-b));left:50%;transform:translateX(-50%) translateY(20px);
@@ -361,6 +385,14 @@ html,body{height:100%;overflow:hidden;background:var(--bg);color:var(--text);
     <button class="ftab" onclick="flt('src:google_news')">Google</button>
     <button class="ftab" onclick="flt('src:reddit')">Reddit</button>
     <button class="ftab" onclick="flt('src:stocktwits')">StockTwits</button>
+  </div>
+
+  <!-- Lang toggle -->
+  <div class="lang-toggle" id="langToggle">
+    <span class="lang-lbl">LANG</span>
+    <button class="lang-btn active" id="btnEN" onclick="setLang('en')">EN</button>
+    <button class="lang-btn" id="btnJP" onclick="setLang('jp')">JP</button>
+    <span class="translating-badge" id="transBadge">翻訳中...</span>
   </div>
 
   <!-- Article list -->
@@ -472,6 +504,8 @@ let watchlist = JSON.parse(localStorage.getItem('fn_watch') || '[]');
 let articles  = [];
 let filter    = 'all';
 let curTick   = '';
+let langMode  = 'en'; // 'en' or 'jp'
+let translationCache = {}; // url -> translated title
 
 // ─────────────────────────────────────────
 // PROXY HELPERS
@@ -674,6 +708,11 @@ async function doFetch() {
   curTick   = tick;
   articles  = [];
   filter    = 'all';
+  langMode  = 'en';
+  translationCache = {};
+  document.getElementById('btnEN').classList.add('active');
+  document.getElementById('btnJP').classList.remove('active');
+  document.getElementById('langToggle').classList.remove('show');
   renderList();
   setBusy(true);
   setSignal('取得中', true);
@@ -714,7 +753,61 @@ async function doFetch() {
     setStatus(`✅ ${totalFound}件取得完了 — ${tick}`);
     setSignal(`${totalFound}件`, false);
     addToWatch(tick);
+    document.getElementById('langToggle').classList.add('show');
   }
+}
+
+// ─────────────────────────────────────────
+// TRANSLATION (JP/EN)
+// ─────────────────────────────────────────
+async function setLang(mode) {
+  langMode = mode;
+  document.getElementById('btnEN').classList.toggle('active', mode === 'en');
+  document.getElementById('btnJP').classList.toggle('active', mode === 'jp');
+  if (mode === 'jp') {
+    await translatePendingArticles();
+  }
+  renderList();
+}
+
+async function translatePendingArticles() {
+  const toTranslate = articles.filter(a => {
+    const isAlreadyJP = a.lang === 'ja';
+    const cached = translationCache[a.url];
+    return !isAlreadyJP && !cached;
+  });
+  if (!toTranslate.length) return;
+
+  const badge = document.getElementById('transBadge');
+  badge.classList.add('show');
+
+  // Batch translate in chunks of 10
+  const CHUNK = 10;
+  for (let i = 0; i < toTranslate.length; i += CHUNK) {
+    const chunk = toTranslate.slice(i, i + CHUNK);
+    const titlesJson = JSON.stringify(chunk.map(a => ({ id: a.url, title: a.title })));
+    try {
+      const res = await fetch('https://api.anthropic.com/v1/messages', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({
+          model: 'claude-sonnet-4-20250514',
+          max_tokens: 1000,
+          system: 'You are a financial news headline translator. Translate English headlines to Japanese concisely. Respond ONLY with a JSON array like: [{"id":"...","title":"..."}]. Keep proper nouns (company names, ticker symbols) as-is. No markdown, no extra text.',
+          messages: [{ role: 'user', content: `Translate these headlines to Japanese:\n${titlesJson}` }]
+        })
+      });
+      const data = await res.json();
+      const text = data.content?.[0]?.text || '[]';
+      const clean = text.replace(/```json|```/g, '').trim();
+      const translated = JSON.parse(clean);
+      translated.forEach(t => { translationCache[t.id] = t.title; });
+      renderList();
+    } catch(e) {
+      console.error('Translation error:', e);
+    }
+  }
+  badge.classList.remove('show');
 }
 
 // ─────────────────────────────────────────
@@ -747,10 +840,19 @@ function renderList() {
       ? `<span class="card-score ${a.score>=0?'sp':'sn'}">${a.score>0?'+':''}${a.score.toFixed(2)}</span>`
       : '';
     const date = fmtDate(a.pubDate);
+    // Use translated title if in JP mode and translation is available
+    let displayTitle = a.title;
+    if (langMode === 'jp') {
+      if (a.lang === 'ja') {
+        displayTitle = a.title; // already Japanese
+      } else {
+        displayTitle = translationCache[a.url] || a.title; // use cache or fallback
+      }
+    }
     return `<a class="card" href="${esc(a.url)}" target="_blank" rel="noopener noreferrer" style="animation-delay:${Math.min(i*.025,.5)}s">
       <div class="bar ${barCls}"></div>
       <div class="card-body">
-        <div class="card-title">${esc(a.title)}</div>
+        <div class="card-title">${esc(displayTitle)}</div>
         <div class="card-meta">
           <span class="src ${srcCls}">${esc(a.source)}</span>
           <span class="card-date">${date}</span>
@@ -773,6 +875,7 @@ function updateStats() {
   const show = articles.length > 0;
   document.getElementById('stats').classList.toggle('show', show);
   document.getElementById('ftabs').classList.toggle('show', show);
+  if (!show) document.getElementById('langToggle').classList.remove('show');
 }
 
 function flt(f) {
